chore: Updated swagger from 2.0 to openapi 3.0.0.
